--- a/src/components/styles/_variables.scss
+++ b/src/components/styles/_variables.scss
@@ -4,6 +4,7 @@ $darker-blue: #003c5b;
 $ligher-blue: #007ea7;
 $baby-blue: #00a8e8;
 $light-blue: #cce4f0;
+$light-teal: #d3f9d8;
 $text-color: #f8f9fa;
 $text-color-darker-500: #dfe0e1;
 $text-color-darker-600: #c6c7c8;
